--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.3",
-    "@angular/common": "~12.1.3",
-    "@angular/compiler": "~12.1.3",
-    "@angular/core": "~12.1.3",
-    "@angular/forms": "~12.1.3",
-    "@angular/platform-browser": "~12.1.3",
-    "@angular/platform-browser-dynamic": "~12.1.3",
-    "@angular/router": "~12.1.3",
-    "rxjs": "~7.2.0",
+    "@angular/animations": "~13.3.12",
+    "@angular/common": "~13.3.12",
+    "@angular/compiler": "~13.3.12",
+    "@angular/core": "~13.3.12",
+    "@angular/forms": "~13.3.12",
+    "@angular/platform-browser": "~13.3.12",
+    "@angular/platform-browser-dynamic": "~13.3.12",
+    "@angular/router": "~13.3.12",
+    "rxjs": "~7.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.3",
-    "@angular-eslint/builder": "12.2.0",
-    "@angular-eslint/eslint-plugin": "12.2.0",
-    "@angular-eslint/eslint-plugin-template": "12.2.0",
-    "@angular-eslint/schematics": "12.2.0",
-    "@angular-eslint/template-parser": "12.2.0",
-    "@angular/cli": "~12.1.3",
-    "@angular/compiler-cli": "~12.1.3",
+    "@angular-devkit/build-angular": "~13.3.10",
+    "@angular-eslint/builder": "~13.4.0",
+    "@angular-eslint/eslint-plugin": "~13.4.0",
+    "@angular-eslint/eslint-plugin-template": "~13.4.0",
+    "@angular-eslint/schematics": "~13.4.0",
+    "@angular-eslint/template-parser": "~13.4.0",
+    "@angular/cli": "~13.3.10",
+    "@angular/compiler-cli": "~13.3.12",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.5",
     "@typescript-eslint/eslint-plugin": "4.3.0",
@@ -61,7 +61,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "husky": {
     "hooks": {
