--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,7 @@
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "ft",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -75,23 +75,6 @@
             "browserTarget": "features-tester:build"
           }
         },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
@@ -99,18 +82,6 @@
               "src/**/*.ts",
               "src/**/*.component.html"
             ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "features-tester:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "features-tester:serve:production"
-            }
           }
         }
       }
