--- a/package.json
+++ b/package.json
@@ -6,62 +6,50 @@
     "start": "ng serve",
     "hmr": "ng serve --hmr",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "fix-lint": "eslint --color --fix --quiet -c .eslintrc.js --ext .ts ./src/app",
-    "e2e": "ng e2e"
+    "fix-lint": "eslint --color --fix --quiet -c .eslintrc.js --ext .ts ./src/app"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.3.0",
-    "@angular/common": "^14.3.0",
-    "@angular/compiler": "^14.3.0",
-    "@angular/core": "^14.3.0",
-    "@angular/forms": "^14.3.0",
-    "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "^14.3.0",
-    "@angular/router": "^14.3.0",
+    "@angular/animations": "^15.2.2",
+    "@angular/common": "^15.2.2",
+    "@angular/compiler": "^15.2.2",
+    "@angular/core": "^15.2.2",
+    "@angular/forms": "^15.2.2",
+    "@angular/platform-browser": "^15.2.2",
+    "@angular/platform-browser-dynamic": "^15.2.2",
+    "@angular/router": "^15.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular-eslint/builder": "~13.4.0",
-    "@angular-eslint/eslint-plugin": "~13.4.0",
-    "@angular-eslint/eslint-plugin-template": "~13.4.0",
-    "@angular-eslint/schematics": "~13.4.0",
-    "@angular-eslint/template-parser": "~13.4.0",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.3.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.5",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.9.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@angular-devkit/build-angular": "^15.2.2",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "^15.2.2",
+    "@angular/compiler-cli": "^15.2.2",
+    "@types/node": "^18.15.1",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "codelyzer": "^6.0.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jasmine": "^4.1.2",
-    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint": "8.22.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-jsdoc": "^39.3.3",
     "eslint-plugin-modules-newline": "0.0.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-rxjs": "^4.0.2",
     "husky": "^4.3.8",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "^10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.5"
   },
   "husky": {
     "hooks": {
