--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-  "name": "features-tester",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "hmr": "ng serve --hmr",
-    "build": "ng build",
-    "lint": "ng lint",
-    "fix-lint": "eslint --color --fix --quiet -c .eslintrc.js --ext .ts ./src/app"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.2.2",
-    "@angular/common": "^15.2.2",
-    "@angular/compiler": "^15.2.2",
-    "@angular/core": "^15.2.2",
-    "@angular/forms": "^15.2.2",
-    "@angular/platform-browser": "^15.2.2",
-    "@angular/platform-browser-dynamic": "^15.2.2",
-    "@angular/router": "^15.2.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.2",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "^15.2.2",
-    "@angular/compiler-cli": "^15.2.2",
-    "@types/node": "^18.15.1",
-    "@typescript-eslint/eslint-plugin": "5.48.2",
-    "@typescript-eslint/parser": "5.48.2",
-    "codelyzer": "^6.0.0",
-    "eslint": "8.22.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-jsdoc": "^39.3.3",
-    "eslint-plugin-modules-newline": "0.0.6",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-rxjs": "^4.0.2",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "protractor": "~7.0.0",
-    "ts-node": "^10.9.1",
-    "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --relative"
+    "name": "features-tester",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "hmr": "ng serve --hmr",
+        "build": "ng build",
+        "lint": "eslint ./src --ext .ts,.tsx,.js,.jsx",
+        "lint:fix": "eslint ./src --ext .ts,.tsx,.js,.jsx --fix"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^15.2.2",
+        "@angular/common": "^15.2.2",
+        "@angular/compiler": "^15.2.2",
+        "@angular/core": "^15.2.2",
+        "@angular/forms": "^15.2.2",
+        "@angular/platform-browser": "^15.2.2",
+        "@angular/platform-browser-dynamic": "^15.2.2",
+        "@angular/router": "^15.2.2",
+        "rxjs": "~7.8.0",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^15.2.2",
+        "@angular-eslint/builder": "15.2.1",
+        "@angular-eslint/eslint-plugin": "15.2.1",
+        "@angular-eslint/eslint-plugin-template": "15.2.1",
+        "@angular-eslint/schematics": "15.2.1",
+        "@angular-eslint/template-parser": "15.2.1",
+        "@angular/cli": "^15.2.2",
+        "@angular/compiler-cli": "^15.2.2",
+        "@types/node": "^18.15.1",
+        "@typescript-eslint/eslint-plugin": "5.48.2",
+        "@typescript-eslint/eslint-plugin-tslint": "5.48.2",
+        "@typescript-eslint/parser": "5.48.2",
+        "codelyzer": "^6.0.0",
+        "eslint": "8.22.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jasmine": "^4.1.3",
+        "eslint-plugin-jsdoc": "^39.3.3",
+        "eslint-plugin-modules-newline": "0.0.6",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-rxjs": "^4.0.2",
+        "husky": "^4.3.8",
+        "lint-staged": "^10.5.4",
+        "prettier": "^2.2.1",
+        "protractor": "~7.0.0",
+        "ts-node": "^10.9.1",
+        "tslint": "~6.1.0",
+        "typescript": "~4.9.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged --relative"
+        }
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "eslint ./src --ext .ts,.tsx,.js,.jsx --fix"
+        ]
     }
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "eslint --color --fix --quiet -c .eslintrc.js --ext .ts ./src/app"
-    ]
-  }
 }
