--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
         "@typescript-eslint/parser": "5.48.2",
         "codelyzer": "^6.0.0",
         "eslint": "8.22.0",
+        "eslint-config-prettier": "^8.7.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jasmine": "^4.1.3",
         "eslint-plugin-jsdoc": "^39.3.3",
         "eslint-plugin-modules-newline": "0.0.6",
         "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-rxjs": "^4.0.2",
         "husky": "^4.3.8",
         "lint-staged": "^10.5.4",
