--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-package-lock.json
-
 # compiled output
 /dist
 /tmp
@@ -13,11 +11,13 @@ package-lock.json
 /node_modules
 
 # profiling files
-chrome-profiler-events*.json
-speed-measure-plugin*.json
+chrome-profiler-events.json
+speed-measure-plugin.json
 
 # IDEs and editors
 /.idea
+/.angular
+package-lock.json
 .project
 .classpath
 .c9/
