--- a/package.json
+++ b/package.json
@@ -1,67 +1,95 @@
 {
-    "name": "features-tester",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "hmr": "ng serve --hmr",
-        "build": "ng build",
-        "lint": "eslint ./src --ext .ts,.tsx,.js,.jsx",
-        "lint:fix": "eslint ./src --ext .ts,.tsx,.js,.jsx --fix"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^15.2.2",
-        "@angular/common": "^15.2.2",
-        "@angular/compiler": "^15.2.2",
-        "@angular/core": "^15.2.2",
-        "@angular/forms": "^15.2.2",
-        "@angular/platform-browser": "^15.2.2",
-        "@angular/platform-browser-dynamic": "^15.2.2",
-        "@angular/router": "^15.2.2",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.0.0",
-        "zone.js": "~0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^15.2.2",
-        "@angular-eslint/builder": "15.2.1",
-        "@angular-eslint/eslint-plugin": "15.2.1",
-        "@angular-eslint/eslint-plugin-template": "15.2.1",
-        "@angular-eslint/schematics": "15.2.1",
-        "@angular-eslint/template-parser": "15.2.1",
-        "@angular/cli": "^15.2.2",
-        "@angular/compiler-cli": "^15.2.2",
-        "@types/node": "^18.15.1",
-        "@typescript-eslint/eslint-plugin": "5.48.2",
-        "@typescript-eslint/eslint-plugin-tslint": "5.48.2",
-        "@typescript-eslint/parser": "5.48.2",
-        "codelyzer": "^6.0.0",
-        "eslint": "8.22.0",
-        "eslint-config-prettier": "^8.7.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jasmine": "^4.1.3",
-        "eslint-plugin-jsdoc": "^39.3.3",
-        "eslint-plugin-modules-newline": "0.0.6",
-        "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-rxjs": "^4.0.2",
-        "husky": "^4.3.8",
-        "lint-staged": "^10.5.4",
-        "prettier": "^2.2.1",
-        "protractor": "~7.0.0",
-        "ts-node": "^10.9.1",
-        "tslint": "~6.1.0",
-        "typescript": "~4.9.5"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged --relative"
-        }
-    },
-    "lint-staged": {
-        "*.{js,ts}": [
-            "eslint ./src --ext .ts,.tsx,.js,.jsx --fix"
-        ]
-    }
+  "name": "@netcracker/order-entry-portal",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve -o",
+    "hmr": "ng serve --hmr",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "serve-dist": "lite-server --baseDir=\"dist/order-entry-portal/\"",
+    "test": "ng test",
+    "svg": "gulp svg -f ./config/gulpfile.js",
+    "e2e": "ng e2e",
+    "lint": "eslint ./src --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint ./src --ext .ts,.tsx,.js,.jsx --fix",
+    "stylelint": "stylelint \"src/**/*.less\" --custom-syntax postcss-less",
+    "stylelint:fix": "stylelint --fix \"src/**/*.less\" --custom-syntax postcss-less",
+    "report": "webpack-bundle-analyzer dist/order-entry-portal/stats.json",
+    "precommit": "lint-staged --no-stash"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~14.0.3",
+    "@angular/cdk": "^14.0.3",
+    "@angular/common": "~14.0.3",
+    "@angular/compiler": "~14.0.3",
+    "@angular/core": "~14.0.3",
+    "@angular/forms": "~14.0.3",
+    "@angular/platform-browser": "~14.0.3",
+    "@angular/platform-browser-dynamic": "~14.0.3",
+    "@angular/router": "~14.0.3",
+    "@iharbeck/ngx-virtual-scroller": "^13.0.3",
+    "@netcracker/ux-ng2": "5.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "brace": "0.11.1",
+    "hammerjs": "^2.0.8",
+    "moment": "2.24.0",
+    "netmask": "^2.0.2",
+    "ngx-color-picker": "^12.0.0",
+    "rxjs": "~7.5.4",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~14.0.2",
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@angular/cli": "^14.0.2",
+    "@angular/compiler-cli": "~14.0.3",
+    "@angular/language-service": "~14.0.3",
+    "@angularclass/hmr": "^3.0.0",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "codelyzer": "^6.0.0",
+    "es5-ext": "0.10.53",
+    "eslint": "8.22.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-modules-newline": "0.0.6",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-rxjs": "^4.0.2",
+    "gulp": "^4.0.2",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^2.2.0",
+    "husky": "^8.0.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.3",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "lint-staged": "^13.0.2",
+    "lite-server": "^2.6.1",
+    "postcss-less": "^6.0.0",
+    "protractor": "~7.0.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-recommended-less": "^1.0.4",
+    "stylelint-config-standard": "^26.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.7.4",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^3.4.1"
+  }
 }
