--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "codelyzer": "^6.0.0",
     "es5-ext": "0.10.53",
     "eslint": "8.22.0",
+    "eslint-config-strict-mode": "^1.2.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-jsdoc": "^39.3.3",
@@ -81,6 +82,7 @@
     "lint-staged": "^13.0.2",
     "lite-server": "^2.6.1",
     "postcss-less": "^6.0.0",
+    "prettier": "^2.8.4",
     "protractor": "~7.0.0",
     "stylelint": "^14.9.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
