--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "order-entry-portal": {
+    "boilerplate": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/order-entry-portal",
+            "outputPath": "dist/boilerplate",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -84,14 +84,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "order-entry-portal:build"
+            "browserTarget": "boilerplate:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "order-entry-portal:build:production"
+              "browserTarget": "boilerplate:build:production"
             },
             "development": {
-              "browserTarget": "order-entry-portal:build:development"
+              "browserTarget": "boilerplate:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -99,7 +99,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "order-entry-portal:build"
+            "browserTarget": "boilerplate:build"
           }
         },
         "test": {
@@ -128,11 +128,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "order-entry-portal:serve"
+            "devServerTarget": "boilerplate:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "order-entry-portal:serve:production"
+              "devServerTarget": "boilerplate:serve:production"
             }
           }
         },
@@ -148,7 +148,7 @@
       }
     }
   },
-  "defaultProject": "order-entry-portal",
+  "defaultProject": "boilerplate",
   "cli": {
     "schematicCollections": [
       "@angular-eslint/schematics"
