--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/compiler-cli": "~14.0.3",
     "@angular/language-service": "~14.0.3",
     "@angularclass/hmr": "^3.0.0",
+    "@spence1115/eslint-plugin-modules-newlines": "^1.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.11.2",
@@ -60,7 +61,7 @@
     "@typescript-eslint/parser": "5.43.0",
     "codelyzer": "^6.0.0",
     "es5-ext": "0.10.53",
-    "eslint": "8.22.0",
+    "eslint": "^8.36.0",
     "eslint-config-strict-mode": "^1.2.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jasmine": "^4.1.3",
